# job-lead-finder

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  .pre-commit-config.yaml  AGGREGATOR_TO_COMPANY_GUIDE.md  AI_PROVIDER_COMPARISON_TEST.md  ARCHITECTURE_ANALYSIS.md  ASMF_MIGRATION_GUIDE.md  AUTODEVELOPMENT_QUICKSTART.md  AUTODEVELOPMENT_STATUS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMPANY_DISCOVERY_PLAN.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.pr-monitor  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTED_FEATURES_AND_TODO.md  IMPLEMENTED_FEATURES_AND_TODO.txt  LINK_VALIDATION_FIXES.md  MCP_INTEGRATION_COMPLETE.md  MCP_INTEGRATION_GUIDE.md  MCP_SETUP_GUIDE.md  MERGE_CONFLICTS_GUIDE.md  MERGE_PR44_INSTRUCTIONS.md  OLLAMA_SETUP.md  OVERNIGHT_WORK_STATUS.md  PARALLEL_WORK_STRATEGY.md  PERSONAL_CONFIG_GUIDE.md  README.md  RELEASE_NOTES.md  RULEBOOK_INTEGRATION.md  STRATEGY.md  TASK.md  TODO.md  Vincent Resume.txt  check_jobs.py  (+27 more)
.ai-review/: pr132-ollama-review.txt  pr132-review-prompt.txt  pr132-review-results.md
.ai-tasks/: NEXT_STEPS.md  NEXT_STEPS.md.failed  STRATEGY-auto-revert-on-failure.md  TODO-brave-search-integration.md  TODO-brave-search-integration.md.processed  TODO-gemini-model-upgrade.md.failed  TODO-security-constants-configurable.md  TODO-security-constants-configurable.md.failed  WORKFLOW-pr-approval-merge.md  current-task.md  migrate-job-tracker-to-framework.md.failed  track-1-gemini.md  track-1-gemini.md.failed  track-2-copilot.md  track-3-copilot.md  track-4-copilot.md  track-5-copilot.md  track-6-copilot.md  track-7-copilot.md  track-8-gemini-logo-ui.md  track-ollama-pr90-fix.md
.aider.tags.cache.v4/: cache.db
.claude/: settings.json
.github/: AI_REVIEW_TRIGGERS.md  CONTRIBUTING.md  COPILOT_TASK_ACTIVE.md  GEMINI.md  PYTHON_BEST_PRACTICES.md  QUOTA_SAVING_WORKFLOW.md  copilot-instructions.md  copilot-task-pr1.md  copilot-task-test-optimization.md  inclusive-language.yaml
.github/ISSUE_TEMPLATE/: ai-task.yml  email-webhook-task.md  kanban-task.md
.github/workflows/: ai-pr-review.yml  ai-task-dispatcher.yml  auto-revert-on-failure.yml  autonomous-execution.yml  ci.yml  version-bump.yml
data/: esg_penalty_data.json
docker/ai-coder/: Dockerfile  README.md  task_processor.py
docs/: AGGREGATOR_TO_COMPANY_GUIDE.md  AI_AGENT_SETUP.md  AI_CODER_IMPLEMENTATION.md  AI_Coding_Style_Guide_prompts.toml  AI_MONITOR_DASHBOARD.md  AI_PROVIDER_COMPARISON_TEST.md  AI_PR_REVIEW.md  AI_TASK_DELEGATION_WORKFLOW.md  AI_TASK_DISPATCHER.md  AI_WORKFLOW_EXAMPLE.md  ARCHITECTURE_ANALYSIS.md  ASYNC_WORK_TODO.md  AUTODEVELOPMENT_QUICKSTART.md  AUTODEVELOPMENT_STATUS.md  AUTOMATION_REALITY_CHECK.md  AUTONOMOUS_AI_SETUP.md  AUTONOMOUS_DEVELOPMENT.md  AUTONOMOUS_QUICKSTART.md  CLAUDE.md  CODING_ASSISTANT.md  COMPANY_DISCOVERY_PLAN.md  COPILOT_WORKFLOW.md  DASHBOARD_SERVICE_STATUS.md  DISCOVERY_CLI.md  EMAIL_INTEGRATION.md  EMAIL_WEBHOOK_SECURITY.md  EMAIL_WEBHOOK_SETUP.md  FRAMEWORK_EXTRACTION.md  FRAMEWORK_USAGE.md  FREE_HOSTING_OPTIONS.md  FUTURE_ENHANCEMENTS.md  GITHUB_RULEBOOK_INTEGRATION.md  INCLUSIVE_LANGUAGE.md  JSEARCH_IMPLEMENTATION_SUMMARY.md  JSEARCH_PROVIDER.md  LINKEDIN_HANDLER.md  LOCAL_LLM_SETUP.md  MCP_SERVICES_GUIDE.md  MERGE_PR44_INSTRUCTIONS.md  MONITORING_GUIDE.md  (+30 more)
docs/TASKS/: TODAY.md  TOMORROW.md  ai-devops-cluster.md  ai-metrics-tracking.md  automated-agents-setup.md  cloud-hosting-research.md  fix-async-tests.md
docs/archive/: AI_PROVIDER_COMPARISON_TEST.md  ARCHITECTURE_ANALYSIS.md  OVERNIGHT_WORK_STATUS.md
examples/: ollama_examples.py
logs/: .gitkeep
memory/docs/: architecture.md  architecture_template.md  error-documentation.md  lessons-learned.md  product_requirement_docs.md  product_requirement_docs_template.md  technical.md  technical_template.md
memory/tasks/: active_context.md  active_context_template.md  tasks_plan.md  tasks_plan_template.md
scripts/: README.md  ai_review_chain.py  auto_revert_on_failure.py  autodev_loop.ps1  autonomous_task_executor.py  check_inclusive_language.py  check_json_structure.py  cline_autodev_service.ps1  cline_manager.ps1  dev-setup.ps1  init_memory_bank.py  monitor_ai_resources.py  monitor_autodev.ps1  ollama_code_assistant.py  pr_actions.py  pr_monitor.py  reload-ui.ps1  search-jobs.ps1  setup_ai_agents.py  setup_ollama_models.py  start_autodev_service.ps1  start_cline.ps1  test_genai_client.py  upload-resume.ps1  verify_version_auto_merge.py
src/app/: __init__.py  ai_monitor_ui.py  background_scheduler.py  cli_email.py  cli_linkedin.py  config_manager.py  config_store.py  email_integration.py  email_parser.py  email_processor.py  email_webhook.py  gemini_cli.py  gemini_provider.py  industry_profiles.py  job_finder.py  job_lead_analyzer.py  job_tracker.py  link_finder.py  link_validator.py  linkedin_handler.py  main.py  mcp_providers.py  ollama_provider.py  ui_server.py  worker.py
src/smf/: README.md  (+1 more)
tests/: PDF_EXTRACTION_COMPARISON.md  conftest.py  resume_from_pdf.txt  test_ai_monitor_ui.py  test_auto_discovery.py  test_background_scheduler.py  test_email_integration.py  test_email_parser.py  test_email_parser_security.py  test_email_processor.py  test_email_webhook.py  test_gemini_cli.py  test_gemini_provider.py  test_job_finder.py  test_job_tracker.py  test_jsearch_provider.py  test_link_finder.py  test_link_validator.py  test_linkedin_handler.py  test_main.py  test_mcp_providers.py  test_ollama_refactor.py  test_pdf_extraction.py  test_pdf_vs_text_search.py  test_provider_fallback.py  test_search_link_and_block_filter.py  test_tracked_jobs_ui.py  test_ui_config_blocked_entities.py  test_ui_config_system_instructions.py  test_ui_job_tracking.py  test_ui_server.py  test_upload_resume.py  test_validate_link_endpoint.py  test_verify_version_auto_merge.py  test_worker.py
tools/: coding_assistant.py  git-aliases.ps1  llm_api.py  requirements.txt  screenshot_utils.py  search_engine.py  web_scraper.py
(+41 files in other folders)
