[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "job-lead-starter"
version = "0.15.0"
description = "Minimal, modular job-finder starter with Gemini template and CI"
requires-python = ">=3.12"
dependencies = [ "python-dotenv>=0.21.0", "beautifulsoup4>=4.12.0", "httpx>=0.25.0", "defusedxml>=0.7.0", "pypdf>=4.0.0", "python-docx>=1.0.0", "apscheduler>=3.10.0",]

[project.optional-dependencies]
dev = [ "pytest>=7.0", "pytest-cov>=5.0", "pytest-asyncio>=0.21.0", "pre-commit", "black", "isort",]
web = [ "fastapi>=0.100.0", "uvicorn[standard]>=0.23.0", "python-multipart>=0.0.6", "flask>=3.0.0",]
test = [ "pytest>=7.0", "pytest-cov>=5.0", "pytest-asyncio>=0.21.0", "pytest-xdist>=3.0", "pytest-sugar", "pytest-benchmark", "pytest-picked", "reportlab",]
gemini = [ "google-genai>=0.1.0",]
rulebook = [ "rulebook-ai @ git+https://github.com/botingw/rulebook-ai.git",]
tools = [ "playwright>=1.41.0", "html5lib>=1.1", "duckduckgo-search>=7.2.1", "openai>=1.59.8", "anthropic>=0.42.0", "google-generativeai", "grpcio==1.71.0",]

[project.scripts]
job-starter = "app.main:main"

[tool.black]
line-length = 120
target-version = [ "py310", "py311",]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 130

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
norecursedirs = [ "scripts", ".git", "__pycache__", ".pytest_cache",]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [ "slow: marks tests as slow (deselected by default, use --slow to run)", "integration: marks tests that make real API calls or external integrations (skip in CI)", "asyncio: marks tests as async (handled by pytest-asyncio)", "unit: marks pure unit tests (no I/O, no network, <0.1s)", "fast: marks tests optimized for quick feedback", "xdist_group: marks tests that must run in the same worker group (pytest-xdist)",]
addopts = "-v --tb=short -m 'not slow' -n auto --dist loadgroup -p no:benchmark --maxfail=3 --ff"
filterwarnings = [ "error", "ignore::DeprecationWarning:google.*", "ignore::DeprecationWarning:pkg_resources.*", "ignore::pytest.PytestUnraisableExceptionWarning", "ignore::ResourceWarning", "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",]

[tool.setuptools.package-data]
app = [ "templates/*.html",]
